게시글 작성시 localData 들어가도록 수정
list 에서 내용을 없애고
게시글 제목을 누르면 postView 페이지로 넘어가 상세로 보게 만들기 진행중

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,9 @@
 <h1>게시판 프로젝트</h1><br>
 <hr>
 <p>저희는 1일 1커밋을 원칙으로 합니다.</p>
-
+<hr>
+<a href="/post">게시판Post 이동</a>
+<br>
+<a href="/postCreate">게시판 작성 이동</a>
 </body>
 </html>
