postView 생성 및 post.html 에서 Title 클릭시 PostNum 값을 받아 해당 PostView/{postNum} 으로 이동하기 추가 + postView 에서 history.back() 를 이용해 이전페이지로 이동하기 기능 추가

--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -9,17 +9,22 @@
 
 <hr>
 <table border="1">
-    <td>글 번호</td>
-    <td>제목</td>
-    <td>내용</td>
-    <td>작성시간</td>
-    <tr th:each="postList : ${postList}">
-        <td th:text="${postList.getPostNum()}"></td>
-        <td th:text="${postList.getTitle()}"></td>
-        <td th:text="${postList.getContent()}"></td>
-        <td th:text="${postList.getCreateTime()}"></td>
+    <tr>
+        <td>글 번호</td>
+        <td>제목</td>
+<!--        <td>내용</td>-->
+        <td>작성시간</td>
     </tr>
+    <tr th:each="post : ${postList}">
+        <td th:text="${post.getPostNum()}"></td>
+        <!-- 포스트 제목에 링크를 추가합니다 -->
+        <td><a th:href="@{/postView/{postNum}(postNum=${post.getPostNum()})}" th:text="${post.getTitle()}"></a></td>
+<!--        <td th:text="${post.getContent()}"></td>-->
+        <td th:text="${post.getCreateTime()}"></td>
+    </tr>
+
 </table>
+
 <hr>
 </body>
 </html>
