postView - 해당 게시글 삭제 추가 삭제기능 추가 했습니다.

--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -22,9 +22,8 @@
 <!--        <td th:text="${post.getContent()}"></td>-->
         <td th:text="${post.getCreateTime()}"></td>
     </tr>
-
 </table>
-
+<a href="postCreate">글작성</a>
 <hr>
 </body>
 </html>
