--- a/src/main/resources/templates/post/postView.html
+++ b/src/main/resources/templates/post/postView.html
@@ -29,7 +29,7 @@
 <form th:action="@{'/postView/' + ${post.postNum}}" method="post">
     <button type="submit" onclick="return confirm('정말로 삭제하시겠습니까?')">글 삭제</button>
 </form>
-<button>수정</button>
+<a th:href="@{'/postUpdate/' + ${post.postNum}}">수정</a>
 <button onclick="history.back()">뒤로가기</button>
 
 
